Building up a code foundation

--- a/BattleTanks/BattleTanks.uproject
+++ b/BattleTanks/BattleTanks.uproject
@@ -7,7 +7,16 @@
 		{
 			"Name": "BattleTanks",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
+	],
+	"TargetPlatforms": [
+		"AllDesktop",
+		"LinuxNoEditor",
+		"MacNoEditor",
+		"WindowsNoEditor"
 	]
 }
